# pf_gat_parser

./: .gitignore  Cargo.toml  Readme.md
src/io/: file_reader.rs  mod.rs
src/io/psse/: mod.rs  pssedata.rs
src/io/psse/components/: area.rs  branch.rs  bus.rs  facts.rs  fixed_shunt.rs  generator.rs  header.rs  impedance_correction.rs  induction_machine.rs  interarea_transfer.rs  load.rs  mod.rs  multisection_line.rs  multiterminal_dc_line.rs  owner.rs  switched_shunt.rs  system_switching_device.rs  transformer.rs  two_terminal_dc.rs  vsc_dc.rs  zone.rs
src/io/psse/parsers/: fast_parser.rs  mod.rs
test-cases/: TEST_parse_psse_v33.RAW
