[package]
name = "pf_gat_parser"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pf_gat_parser"

[features]
serde = ["dep:serde"]

[dependencies]
memmap2 = "0.9.8"
rayon = "1.11.0"
regex = "1.11.2"
sparsetools = "0.2.4"

serde = { version = "1.0.219", optional = true, features = ["derive"] }